<resources>
    <string name="app_name">AdminRestaurante</string>
    <string name="fab_description">Agregar nuevo elemento</string>

    <string name="image_categorias">Imagen de Categorias</string>
    <string name="image_platillos">Imagen de Platillos</string>

    <string name="rvPlatillos">Lista de platillos disponibles</string>
    <string name="rvCategorias">Lista de Categorias disponibles</string>

    <string name="delete_button_description">Botón para borrar elementos</string>

    /*Activity Login String*/
    <string name="strLogin">Iniciar Sesión</string>
    <string name="desc_login_chef">Imagen de Icono de Login y register</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="txtRegister">¿No tienes cuenta? REGISTRARTE</string>

    /*Activity Register String*/
    <string name="strRegister">Registrarse</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_apellidoM">Apellido Materno</string>
    <string name="hint_apellidoP">Apellido Paterno</string>
    <string name="hint_nombre">Nombre</string>

    /*Activity ITEM_RV_PLATILLO String*/
    <string name="rvPlatillo">Nombre del Platillo</string>
    <string name="rvDescripcion">Descripción del platillo</string>
    <string name="rvCategoria">Categoría</string>
    <string name="rvPrecio">S/0.0</string>
    <string name="rvDesLapiz">Editar Item Platillo</string>
    <string name="hint_rvDesElminitar">Eliminar Item Platillo</string>

    /*Activity ITEM_RV_categoria String*/
    <string name="rvDescripcionImageCategoria">Contiene Nombre de la categoría</string>
    <string name="rvDesCatEliminar">Eliminar Item Categoría</string>
    <string name="txtVNombreCategoria">Nombre Categoría</string>


    // NAVEGACION
    <string name="strCategorias">Categorías</string>
    <string name="strPlatillos">Platillos</string>
    <string name="strPedidos">Pedidos</string>
    <string name="strUsuarios">Usuarios</string>
    <string name="strCerrarSesion">Cerrar Sesión</string>
    <string name="strAgregar">Agregar</string>
    <string name="strEditar">Editar</string>
    <string name="strEliminar">Eliminar</string>
    <string name="img_usuarios">Imagen de Usuarios</string>
    <string name="img_platillos">Imagen de Platillos</string>
    <string name="img_pedidos">Imagen de Pedidos</string>
    <string name="img_categorias">Imagen de Categorías</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>