<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="4dp"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCategorias"
        android:layout_width="220dp"
        android:layout_height="207dp"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            android:layout_margin="0dp"
            >

            <ImageView
                android:id="@+id/ivCategoria"
                android:layout_width="174dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/rvDescripcionImageCategoria"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08" />

            <TextView
                android:id="@+id/tvNomCategoria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/txtVNombreCategoria"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCategoria"
                app:layout_constraintVertical_bias="0.809" />

            <ImageButton
                android:id="@+id/ibtnBorrar"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_circle_button"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/rvDesCatEliminar"
                android:elevation="4dp"
                android:padding="6dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_bote_basura"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.971"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.14" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
